# exercises

./: .gitignore  .gitmodules  README.md  exercise2.1.cpp
assignments/: a121.cpp
assignments/a121/: a121
assignments/a122/: a122  a122.cpp
assignments/a123/: a123.cpp
assignments/a124/: a124.cpp
assignments/a125/: a125.cpp
assignments/a131/a131ex1/: ex1.cpp
assignments/a131/a131ex10/: ex10.cpp
assignments/a131/a131ex2/: ex2.cpp
assignments/a131/a131ex3/: ex3.cpp
assignments/a131/a131ex4/: ex4.cpp
assignments/a132/: CMakeLists.txt  a132main.cpp  main.cpp
assignments/a132/src/: CMakeLists.txt  account.cpp  fileop.cpp  user.cpp
assignments/a211/: a211.cpp
assignments/a212/: a212.cpp
assignments/a221/: CMakeLists.txt  main.cpp  menu.cpp
assignments/a222/: main.cpp
assignments/a231/: main.cpp
assignments/a232/: CMakeLists.txt  main.cpp
assignments/a241/: lorem_ipsum.txt  main.cpp
assignments/a242/: CMakeLists.txt  devices.csv  main  main.cpp  registers.csv
assignments/a331/: main.cpp
assignments/at1/: CMakeLists.txt  main.cpp
exercise2/: README.md
exercise2.1/: constants.cpp  constants.h  exercise2.1.cpp
exercise2.2/: constants.cpp  constants.h  exercise2.2.cpp
exercise2.3/: exercise2.3.cpp
exercise2.6/: exercise2.6  exercise2.6.cpp
exercise2/exercise2.1/: exercise2.1.cpp
exercise2/exercise2.2/: exercise2.2.cpp
exercise2/exercise2.4/: exercise2.4.cpp
exercise2/exercise2.5/: exercise2.5.cpp
exercise2/exercise2.6/: exercise2.6  exercise2.6.cpp
exercise2/exercise2.7/: exercise2.7.cpp
exercise3/: exercise3.1.cpp
(+66 files in other folders)
